Setup better support for OSX menus