@@ -1,5 +1,4 @@
 import org.apache.tools.ant.taskdefs.condition.Os
-import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
 
 plugins {
     id 'application'
@@ -8,20 +7,9 @@ plugins {
     id 'com.dua3.javafxgradle7plugin' version '0.0.9'
     id "de.jjohannes.extra-java-module-info" version "0.6"
 }
-
 repositories{
     mavenCentral()
     jcenter()
-}
-
-def currentOS = DefaultNativePlatform.currentOperatingSystem;
-def platform
-if (currentOS.isWindows()) {
-    platform = 'win'
-} else if (currentOS.isLinux()) {
-    platform = 'linux'
-} else if (currentOS.isMacOsX()) {
-    platform = 'mac'
 }
 
 extraJavaModuleInfo {
@@ -72,13 +60,6 @@ dependencies{
 
     implementation 'org.jetbrains:annotations:20.1.0'
 
-    // JFX
-    implementation "org.openjfx:javafx-base:16:${platform}"
-    implementation "org.openjfx:javafx-controls:16:${platform}"
-    implementation "org.openjfx:javafx-graphics:16:${platform}"
-    implementation "org.openjfx:javafx-swing:16:${platform}"
-    implementation "org.openjfx:javafx-fxml:16:${platform}"
-
     // OSX
     implementation 'de.jangassen:nsmenufx:3.1.0'
 
@@ -101,6 +82,7 @@ application {
     mainClass.set('fr.clementgre.pdf4teachers.Main')
 }
 
+// Xlint check
 
 /*gradle.projectsEvaluated {
     tasks.withType(JavaCompile){
@@ -110,7 +92,6 @@ application {
 
 run {
     jvmArgs = [
-            '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
             '--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls',
             '--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls',
             '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
@@ -132,13 +113,23 @@ jlink {
                 '--strip-debug',
                 '--compress', '2',
                 '--no-header-files',
-                '--no-man-pages',
+                '--no-man-pages'
             ] as List<String>
     launcher {
         name = 'PDF4Teachers'
         jvmArgs = [
                 '--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls',
-                '--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls'
+                '--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
         ]
     }
 
